--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
 }
 
 #booklist {
@@ -18,7 +17,7 @@
 
 .box {
   border: 2px solid black;
-  width: 80%;
+  width: 90%;
   margin: 1rem 0;
 }
 
@@ -43,13 +42,8 @@
 }
 
 h1 {
+  font-size: 3rem;
   margin-top: 1rem;
-}
-
-.line {
-  width: 10rem;
-  height: 2px;
-  background-color: black;
 }
 
 .add-book {
@@ -59,18 +53,80 @@ h1 {
 }
 
 h2 {
-  margin-top: 1rem;
+  font-size: 3rem;
+  margin: 1rem 0;
 }
 
 #form {
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
+  width: 40%;
 }
 
 #form > * {
   margin-bottom: 0.5rem;
+  padding: 0.1rem 0.5rem;
 }
 
 #add {
   align-self: flex-end;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border: 2px solid black;
+  margin: 0.5rem;
+}
+
+.menu {
+  display: flex;
+  list-style: none;
+}
+
+.menu li {
+  margin-right: 0.5rem;
+}
+
+.vertical-line {
+  width: 2px;
+  height: auto;
+  background-color: black;
+  padding-right: 0;
+}
+
+.date {
+  display: flex;
+  justify-content: end;
+  margin: 0 1rem;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-data {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-list {
+  width: 90%;
+  align-items: center;
+  margin-top: 2rem;
+  margin-left: 5rem;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border: 2px solid black;
+  margin: 0.5rem;
+  position: absolute;
+  bottom: 0;
 }
